--- a/letter.html
+++ b/letter.html
@@ -64,7 +64,7 @@
 
 <div class="letter" id="letter">
     <img src="oldst.png" alt="Letter Background">
-    <div class="letter-text">Dear ruru</div>
+    <div class="letter-text"></div>
 </div>
 
 <script>
